@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.28 (gritter) 9/18/05
+ * Sccsid @(#)proto.h	1.29 (gritter) 9/30/05
  */
 
 /* t6.c */
@@ -50,6 +50,7 @@ void caserhang(void);
 void casekernpair(void);
 void casekernafter(void);
 void casekernbefore(void);
+void caseftr(void);
 int un2tr(int, int *);
 int tr2un(tchar, int);
 tchar setuc0(int);
