@@ -1,6 +1,8 @@
 Release ...
 * troff/dpost: Preliminary support for CFF-based OpenType fonts has been
   added.
+* troff: A ".ftr" request has been introduced as a font-specific variant of
+  the ".tr" request.
 * troff: Kerning is now applied to pairs of characters that originate from
   the same font mounted at two different positions.
 * dpost: Can now access all characters in a large PostScript font, not only
